--- a/index.html
+++ b/index.html
@@ -4,34 +4,58 @@
         <meta charset="utf-8">
         <title>Test Page: Don't Panic</title>
         <style>
-
+            div {
+                border: 1px solid black;
+            }
+            li a { 
+                color: red;
+                border: 1px solid black;
+            }
+            div a {
+                color: green
+            } 
+            #exec-bio {
+                background-color: lightgray;
+            }
+            .bio-box {
+                border: 1px solid black
+            }
+            .bio-box a {
+                color: green;
+            }
+            #first-link {
+                background-color: orange;
+            }
+            .modified-box {
+                background-color: azure;
+            }
         </style>
     </head>
     <body>
         <h1>I'm a h1</h1>
         <ul>
             <li>
-                <a href="https://example.com/" style="color: red;">Link</a>
+                <a id="first-link" href="https://example.com/" >Link</a>
             </li>
             <li>
-                <a href="https://example.com/" style="color: red;">Link</a>
+                <a href="https://example.com/">Link</a>
             </li>
             <li>
-                <a href="https://example.com/" style="color: red;">Link</a>
+                <a href="https://example.com/">Link</a>
             </li>
         </ul>
         <h2>I'm a h2</h2>
-        <div style="border: 1px solid black;">
-            <a href="https://example.com/" style="color: green;">I'm a link</a>
+        <div id="exec-bio" class="bio-box modified-box">
+            <a href="https://example.com/">I'm a link</a>
         </div>
-        <div style="border: 1px solid black;">
-            <a href="https://example.com/" style="color: green;">I'm a link</a>
+        <div class="bio-box modified-box">
+            <a href="https://example.com/">I'm a link</a>
         </div>
-        <div style="border: 1px solid black;">
-            <a href="https://example.com/" style="color: green;">I'm a link</a>
+        <div class="bio-box modified-box">
+            <a href="https://example.com/">I'm a link</a>
         </div>
-        <div style="border: 1px solid black;">
-            <a href="https://example.com/" style="color: green;">I'm a link</a>
+        <div class="bio-box modified-box">
+            <a href="https://example.com/">I'm a link</a>
         </div>
     </body>
 </html>
