--- a/index.html
+++ b/index.html
@@ -1,61 +1,177 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Test Page: Don't Panic</title>
-        <style>
-            div {
-                border: 1px solid black;
-            }
-            li a { 
-                color: red;
-                border: 1px solid black;
-            }
-            div a {
-                color: green
-            } 
-            #exec-bio {
-                background-color: lightgray;
-            }
-            .bio-box {
-                border: 1px solid black
-            }
-            .bio-box a {
-                color: green;
-            }
-            #first-link {
-                background-color: orange;
-            }
-            .modified-box {
-                background-color: azure;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>I'm a h1</h1>
-        <ul>
-            <li>
-                <a id="first-link" href="https://example.com/" >Link</a>
-            </li>
-            <li>
-                <a href="https://example.com/">Link</a>
-            </li>
-            <li>
-                <a href="https://example.com/">Link</a>
-            </li>
-        </ul>
-        <h2>I'm a h2</h2>
-        <div id="exec-bio" class="bio-box modified-box">
-            <a href="https://example.com/">I'm a link</a>
+  <head>
+    <meta charset="utf-8" />
+    <title>Test Page: Don't Panic</title>
+    <style>
+      /* Global Styles */
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        font-size: 20px;
+        margin-top: 0;
+      }
+
+      a {
+        color: rgba(150, 150, 150, 0.5);
+      }
+
+      /* Social styles */
+      .social-link {
+        background-color: rgba(150, 150, 150, 0.5);
+        color: #00f;
+        display: inline-block;
+        width: 36px;
+        height: 36px;
+      }
+
+      /*Bio styles*/
+
+      .bio-wrapper {
+        font-size: 24px;
+        overflow: hidden;
+      }
+
+      .bio-wrapper:after {
+        visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: " ";
+        clear: both;
+        height: 0;
+      }
+
+      .bio-box {
+        border: 1px solid #000;
+        box-sizing: border-box;
+        float: left;
+        font-size: 1rem;
+        padding: 2%;
+        width: 25%;
+      }
+
+      .bio-box h3 {
+        font-size: 1.5em;
+      }
+
+      .bio-copy {
+        font-size: 1em;
+      }
+
+      .bio-copy a {
+        color: #0f0;
+      }
+
+      /* Hero Styles */
+      .full-hero {
+        background-color: #c7dbfc;
+        height: 50vw;
+        width: 50vw;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- <div style="border: 1px solid #000; width: 50%; height: 100%">
+      I’m a percent test
+    </div> -->
+    <div class="full-hero hero-home">
+      <h1>I'm a h1</h1>
+      <ul class="social-list">
+        <li class="social-link show">
+          <a href="https://example.com/">Link</a>
+        </li>
+        <li class="social-link">
+          <a href="https://example.com/">Link</a>
+        </li>
+        <li class="social-link">
+          <a href="https://example.com/">Link</a>
+        </li>
+      </ul>
+    </div>
+    <h2>I'm a h2</h2>
+
+    <div class="bio-wrapper">
+      <div class="bio-box">
+        <h3>Michael Hartl</h3>
+        <a href="https://example.com/" class="social-link">here</a>
+        <div class="bio-copy">
+          <p>
+            Know for his dazzling charm, rapier wit, and unrivaled humility,
+            Michael is the creator of the
+            <a href="https://www.railstutorial.org/">Ruby on tutorial</a> and
+            principal author of the
+            <a href="https://learnenough.com"> Learn Enough to be Dangerous</a>
+            introductory sequence. Michael is also notorious as the founder of
+            <a href="http://tauday.com/">Tau Day</a> and author of
+            <a href="http://tauday.com/tau-manifesto"
+              ><em>The tau manifesto</em></a
+            >, but rumors that he's secretly a supervillain are slightly
+            exaggerated.
+          </p>
         </div>
-        <div class="bio-box modified-box">
-            <a href="https://example.com/">I'm a link</a>
+      </div>
+      <div class="bio-box">
+        <h3>Lee Donahoe</h3>
+        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <div class="bio-copy">
+          <p>
+            When he's not literally swimming with sharks or hunting powder
+            stashes on his snowboard, you can find Lee in front of his computer
+            designing nterfaces, doing front-end development, or writing some of
+            the interface-related Learn Enough tutorials.
+          </p>
         </div>
-        <div class="bio-box modified-box">
-            <a href="https://example.com/">I'm a link</a>
+      </div>
+      <div class="bio-box">
+        <h3>Nick Merwin</h3>
+        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <div class="bio-copy">
+          <p>
+            You may have seen him shredding guitar live with Capital Cities on
+            Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a
+            true nerd at heart. He's just as happy shredding well-spec'd lines
+            of code from a tour bus as he is from his kitchen table.
+          </p>
         </div>
-        <div class="bio-box modified-box">
-            <a href="https://example.com/">I'm a link</a>
-        </div>
-    </body>
+      </div>
+      <div class="bio-box">
+        <h3>??</h3>
+        <p>The Future</p>
+      </div>
+    </div>
+
+    <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teach the
+      world <em>technical sophistication</em>, which includes both "hard skills"
+      like coding, command lines, and version control, and "soft skills" like
+      guessing keyboard shortcuts, Googling error messages, and knowing when to
+      just reboot the darn thing.
+    </p>
+    <p>
+      We believe there are <strong>at least a billion people</strong> who can
+      benefit from learning technical sophistication, probably more. To join our
+      movement,
+      <a href="https://learnenough.com/#email_list"
+        >sign up for our official email list</a
+      >
+      now.
+    </p>
+    <h3>Background</h3>
+    <p>
+      Learn Enough to Be Dangerous is an outgrowth of the
+      <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and
+      the <a href="https://www.softcover.io/">Softcover publishing platform</a>.
+      This page is part of the sample site for
+      <a href="https://learnenough.com/css-tutorial"
+        ><em>Learn Enough CSS and Layout to Be Dangerous</em></a
+      >, which teaches the basics of <strong>C</strong>ascading
+      <strong>S</strong>tyle <strong>S</strong>heets, the language that allows
+      web pages to be styled. Other related tutorials can be found at
+      <a href="https://learnenough.com/">learnenough.com</a>.
+    </p>
+  </body>
 </html>
