--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
       }
 
       h1 {
-        font-size: 20px;
         margin-top: 0;
-      }
-
-      a {
-        color: rgba(150, 150, 150, 0.5);
       }
 
       /* Social styles */
@@ -27,6 +22,17 @@
         display: inline-block;
         width: 36px;
         height: 36px;
+      }
+
+      /* Social Links*/
+      .social-list {
+        list-style: none;
+        padding: 0;
+        text-align: left;
+      }
+
+      .social-list > li {
+        display: inline-block;
       }
 
       /*Bio styles*/
@@ -50,8 +56,13 @@
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
+        margin: 40px 1% 0;
         padding: 2%;
-        width: 25%;
+        width: 23%;
+      }
+
+      .bio-box > a {
+        background-color: #c68bf9;
       }
 
       .bio-box h3 {
@@ -69,8 +80,7 @@
       /* Hero Styles */
       .full-hero {
         background-color: #c7dbfc;
-        height: 50vw;
-        width: 50vw;
+        height: 100vh;
       }
     </style>
   </head>
@@ -81,14 +91,14 @@
     <div class="full-hero hero-home">
       <h1>I'm a h1</h1>
       <ul class="social-list">
-        <li class="social-link show">
-          <a href="https://example.com/">Link</a>
+        <li class="social-link">
+          <a href="https://example.com/">Link 1</a>
         </li>
         <li class="social-link">
-          <a href="https://example.com/">Link</a>
+          <a href="https://example.com/">Link 2</a>
         </li>
         <li class="social-link">
-          <a href="https://example.com/">Link</a>
+          <a href="https://example.com/">Link 3</a>
         </li>
       </ul>
     </div>
